<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.4">
  <POU Name="ASCF_CL_30_NOT" Id="{18302cfa-aaff-4c6e-8c3b-b5cd539d636e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION ASCF_CL_30_NOT : WORD
VAR_OUTPUT
	Out				: ASCF_UnionType;					//Result of the computation (Type: VDINT)
END_VAR

VAR_IN_OUT
	Arguments		: ARRAY[0..3] OF ASCF_UnionType;		//Arguments for the function (Arguments: 2 - 4, Type: VDINT)
END_VAR

VAR
	tempQC					: BYTE;
	tempResult				: BOOL;
	constDefaultUnionType	: ASCF_UnionType;			//Union type that holds only one of its possible data types at a time. The type can be selected via the "Typeselector". Independent of the selected type, every value has a quality code "VQC".
	constUnionTypes			: ASCF_EnumUnionTypes;		//Enumeration type of the valid values for the "Typeselector" of a "GVR_unionType"-UDT.
	constQualityCodes		: ASCF_QualityCodes;			//This enum encodes the defines quality codes for the MTP standard. The values are shown in HEX. The lowest value (1) has the highest priority.    | QC Name              | Value | Priority ||----------------------|:-----:|:--------:|| Failure              | 16#00 |    1     || Function Check       | 16#60 |    2     || Ma: INTenance Request  | 16#A4 |    3     || Out of Specification | 16#68 |    4     || OK                   | 16#80 |    5     || Out of Service       | 16#1C |    6     || No Status            | 16#FF |    7     |
	constErrors				: ASCF_CL_EnumErrors;			//Enumeration type of the error codes of the Adaptive Logic.
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//#################################################################################################
{region "INITIALIZE VARIABLES"}
    // #tempResult := 0.0;
    // #tempQC := #constQualityCodes."No Status";
    Out := constDefaultUnionType;
{endregion}

//#################################################################################################
{region "PROCESS ARGUMENTS"}
    //-------------------------------------------------------------------------------------
    // no type --> too few arguments error
    IF Arguments[0].Typeselector = constUnionTypes.None THEN
        
        ASCF_CL_30_NOT := constErrors.TooFewArguments;
        RETURN;
        
        //-------------------------------------------------------------------------------------
        // VBool --> process
    ELSIF Arguments[0].Typeselector = constUnionTypes.VBool THEN
        
        tempResult := NOT Arguments[0].VBool;
        tempQC := Arguments[0].VQC;
        
        //-------------------------------------------------------------------------------------
        // invalid type --> error
    ELSE
        ASCF_CL_30_NOT := constErrors.InvalidType;
        RETURN;
        
    END_IF;
{endregion}

//#################################################################################################
{region "OUTPUT"}
    Out.Typeselector := constUnionTypes.VBool;
    Out.VQC := tempQC;
    Out.VBool := tempResult;
    
    ASCF_CL_30_NOT := constErrors.None;
{endregion}]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>